<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快递速查</string>
    
    <string name="menu_option">选择操作</string>
    <string name="quick_search">快速查询</string>
    <string name="my_order">我的快递单</string>
    <string name="all_company">快递大全</string>
    <string name="search_history">历史记录</string>
    <string name="more_option">更多</string>
    
    <string name="express_company">快递公司:</string>
    <string name="express_order">快递单号:</string>
    <string name="hint_company">选择快递公司</string>
    <string name="hint_order">填入快递单号</string>
    <string name="search">查    询</string>
    <string name="search_tip">信息不完整</string>
	
    <string name="search_result">查询结果</string>
    
    <string name="add_order">添加新的快递单</string>
    
    <string  name="no_history_record">暂无历史查询记录</string>
    <string  name="delete_success">删除成功</string>
    
</resources>
