<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/margin_30"
	    android:layout_marginLeft="@dimen/margin_10"
	    android:layout_marginRight="@dimen/margin_10"
	    android:background="@drawable/app_item_selector">
	    <TextView 
	        android:id="@+id/txt_company_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/express_company"
	        android:textSize="@dimen/text_17"
	        android:textColor="@color/black"/>
	    <ImageView 
	        android:id="@+id/btn_choose_company"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:src="@drawable/arrow_more_company"
	        android:layout_marginRight="@dimen/margin_15"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"/>
	    <EditText 
	        android:id="@+id/edit_company_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_marginLeft="@dimen/margin_5"
	        android:layout_marginRight="@dimen/margin_10"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/txt_company_name"
	        android:layout_toLeftOf="@id/btn_choose_company"
	        android:enabled="false"
	        android:clickable="true"
	        android:hint="@string/hint_company"
	        android:textSize="@dimen/text_17"
	        android:textColor="@color/blue"/>
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="@dimen/margin_10"
	    android:layout_marginRight="@dimen/margin_10"
	    android:background="@drawable/app_item_selector">
	    <TextView 
	        android:id="@+id/txt_order_num"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/express_order"
	        android:textSize="@dimen/text_17"
	        android:textColor="@color/black"/>
	    <EditText 
	        android:id="@+id/edit_order_num"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_marginLeft="@dimen/margin_5"
	        android:layout_marginRight="@dimen/margin_10"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/txt_order_num"
	        android:hint="@string/hint_order"
	        android:textSize="@dimen/text_17"
	        android:textColor="@color/blue"/>
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="@dimen/margin_10"
	    android:layout_marginRight="@dimen/margin_10"
	    android:background="@drawable/app_item_selector">
	    <Button 
	        android:id="@+id/btn_quick_search"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/yellow_btn_selector"
	        android:layout_marginTop="@dimen/margin_30"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:text="@string/search"
	        android:textSize="@dimen/text_22"
	        android:textColor="@color/white"/>
	</RelativeLayout>
</LinearLayout>
